the hottest formats similar to digikala

--- a/homepage.html
+++ b/homepage.html
@@ -1451,7 +1451,7 @@
                 <div class="container-common__product">
                     <div class="container-common__product__title">
                         <div class="container-common-product__title__img">
-                            <img src="./img/jaam-icon.svg" alt="jaam-icon">
+                            <img src="./img/heart-icon.svg" alt="haert-icon">
                         </div>
                         <h2>محبوب ترین محصولات</h2>
                     </div>
@@ -2493,6 +2493,262 @@
             </div>
         </article>
 
+        <article class="total-container-the-hottest-formats-similar-to-digikala first-container-for-common-style ">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/jaam-icon.svg" alt="jaam-icon">
+                        </div>
+                        <h2>داغ ترین قالب های مشابه دیجی کالا</h2>
+                    </div>
+                    <div class="container-common-product__left">
+                        <div class="arrow-right">
+                            <i class="fa fa-long-arrow-right"></i>
+                        </div>
+                        <div class="arrow-left hover-gray">
+                            <i class="fa fa-long-arrow-left"></i>
+                        </div>
+                        <div class="container-common-product__left__see-all">
+                            <a href="#">مشاهده همه</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-common__show-products">
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/timcheh-img.jpg" alt="timcheh-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب فروشگاهی تیمچه +10 دموی حرفه‌ای </a></h1>
+                            <h1><a href="#" class="hover-color-green"> قالب فروشگاهی تیمچه +10 دمو...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green"> قالب فروشگاهی وردپرس</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۷۰۰</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۳۹۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/fornam-img.jpg" alt="fornam-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب فرنام، قالب فروشگاهی ایران کالا </a></h1>
+                            <h1><a href="#" class="hover-color-green"> قالب فرنام، قالب فروشگاهی ایر...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱,۴۲۲</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۶٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۴۱۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/kando-img.png" alt="kando-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب فروشگاهی کندو با طراحی اختصاصی </a></h1>
+                            <h1><a href="#" class="hover-color-green">  قالب فروشگاهی کندو با طراحی...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۸۰۹</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۱٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۳۹۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/lina-shop-img.jpg" alt="lina-shop-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green">  قالب فروشگاهی ایرانی لیاناشاپ  </a></h1>
+                            <h1><a href="#" class="hover-color-green">  قالب فروشگاهی ایرانی لیاناشاپ </a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۲۷۸</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۴٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۴۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/negarin-market-img.jpg" alt="negarin-market-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green">  قالب فروشگاهی نگارین مارکت </a></h1>
+                            <h1><a href="#" class="hover-color-green">   قالب فروشگاهی نگارین مارکت </a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۲۲۴</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۷۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۲۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/pasazh-img.jpg" alt="pasazh-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب فروشگاهی پاساژ </a></h1>
+                            <h1><a href="#" class="hover-color-green"> قالب فروشگاهی پاساژ </a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۲۱۷</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۴٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۲۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </article>
+
+        <!-- <article class="total-container-Offers">
+            <div class="second-container">
+                <div class="container-Offers">
+                    <div class="container-Offer">
+
+                    </div>
+                </div>
+            </div>
+        </article> -->
 
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
