add offers section

--- a/homepage.html
+++ b/homepage.html
@@ -2740,15 +2740,50 @@
             </div>
         </article>
 
-        <!-- <article class="total-container-Offers">
+        <article class="total-container-Offers">
             <div class="second-container">
                 <div class="container-Offers">
                     <div class="container-Offer">
+                        <a href="#" class="container-Offer__total-container-link">
+                            <div class="container-Offer__total-container-link__container-img">
+                                <img src="./img/home-icon.svg" alt="home-icon">
+                            </div>
+                            <p class="container-Offer__total-container-link__title">
+                                وبلاگ راست چین
+                                <i class="fas fa-arrow-left"></i>
+                            </p>
+                            <p class="container-Offer__total-container-link__description"> جدیدترین آموزش‌های حرفه‌ای راست چین</p>
+                        </a>    
+                    </div>
 
+                    <div class="container-Offer">
+                        <a href="#" class="container-Offer__total-container-link">
+                            <div class="container-Offer__total-container-link__container-img">
+                                <img src="./img/wallet-icon.svg" alt="">
+                            </div>
+                            <p class="container-Offer__total-container-link__title">
+                                فرصت های شغلی
+                                <i class="fas fa-arrow-left"></i>
+                            </p>
+                            <p class="container-Offer__total-container-link__description"> مزایای استخدام در راست چین را مشاهده کنید</p>
+                        </a>
+                    </div>
+
+                    <div class="container-Offer">
+                        <a href="#" class="container-Offer__total-container-link">
+                            <div class="container-Offer__total-container-link__container-img">
+                                <img src="./img/seller-icon.svg" alt="seller-icon">
+                            </div>
+                            <p class="container-Offer__total-container-link__title">
+                                فروشنده شوید
+                                <i class="fas fa-arrow-left"></i>
+                            </p>
+                            <p class="container-Offer__total-container-link__description"> درآمد میلیونی داشته باشید</p>
+                        </a>
                     </div>
                 </div>
             </div>
-        </article> -->
+        </article>
 
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
