Add selected designer of the week section

--- a/homepage.html
+++ b/homepage.html
@@ -2785,6 +2785,167 @@
             </div>
         </article>
 
+        <article class="total-container-selected-designer-of-the-week first-container-for-common-style ">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/selected-designer-icon.svg" alt="selected-designer-icon">
+                        </div>
+                        <h2>طراح برگزیده هفته</h2>
+                    </div>
+                    <div class="container-common-product__left">
+                        <div class="arrow-right">
+                            <i class="fa fa-long-arrow-right"></i>
+                        </div>
+                        <div class="arrow-left hover-gray">
+                            <i class="fa fa-long-arrow-left"></i>
+                        </div>
+                        <div class="container-common-product__left__see-all">
+                            <a href="#">مشاهده همه</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-common__show-products">
+                    <div class="container-show-product container-show-product--total-container-for-design">
+                        <div class="container-design-img-and-title">
+                            <div class="container-design-img-and-title__container-img">
+                                <img src="./img/design-img.png" alt="design-img">
+                            </div>
+                            <div class="container-design-img-and-title__container-title">
+                                <h4>M_Design</h4>
+                                <h6>@delbarbash</h6>
+                            </div>
+                        </div>
+                        <div class="container-sell-and-favorite">
+                            <div class="container-sell-and-favorite__container-sell">
+                                <span>۱۴۳</span>
+                                <span>فروش</span>
+                            </div>
+                            <div class="container-sell-and-favorite__container-favorite">
+                                <span>۸۰٪</span>
+                                <span>رضایت</span>
+                            </div>
+                        </div>
+                        <div class="container-design-all-products">
+                            <button class="container-design-all-products__btn hover-gray"><a href="#" >همه محصولات</a></button>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/wooBulk-img.jpg" alt="wooBulk-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه ووبالک، تخفیف گروهی بر اساس قیمت </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه ووبالک، تخفیف گروهی بر...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه فروشگاهی</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۷</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۶٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۹۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/stratumPro-img.jpg" alt="stratumPro-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزودنی المنتور Stratum Pro، استارتام </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزودنی المنتور Stratum Pro، اس...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزودنی های المنتور</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۳</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۱۰۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/wooSlider-img.jpg" alt="wooSlider-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه اسلایدر محصولات ووکامرس، Woo Slider </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه اسلایدر محصولات ووکامر...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزودنی های المنتور</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۳۳</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۴۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </article>
+
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
