Add newest blog posts section

--- a/homepage.html
+++ b/homepage.html
@@ -2946,6 +2946,140 @@
             </div>
         </article>
 
+        <article class="total-container-newest-blog-posts first-container-for-common-style">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/newestBlog-icon.svg" alt="newestBlog-icon">
+                        </div>
+                        <h2>جدیدترین‌های وبلاگ</h2>
+                    </div>
+                    <div class="container-common-product__left__see-all">
+                        <a href="#">مشاهده همه</a>
+                    </div>
+                </div>
+                <div class="container-newest-blog-posts">
+                    <div class="container-newest-blog-post">
+                        <div class="container-newest-blog-post__container-img">
+                            <a href="#"><img src="./img/training-to-close-a-comment-img.png" alt="training-to-close-a-comment-img"></a>
+                        </div>
+                        <a href="#" class="container-newest-blog-post__title-link hover-color-green">آموزش بستن دیدگاه یا نظرات در وردپرس...</a>
+                        <p class="container-newest-blog-post__description">
+                            بستن دیدگاه در وردپرس یکی از روش های مدیریت دیدگاه های کاربران است که به چند صورت قابل انجام است. غیر فعال کردن نظرات را با افزونه و ...
+                        </p>
+                        <div class="container-newest-blog-post__container-Comments">
+                            <div class="container-check">
+                                <div class="container-newest-blog-post__nine-to-square">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <span>مجموعه آموزش های وردپرس</span>
+                            </div>
+                            <div class="container-point-of-view">
+                                <i class="fa fa-comment-o"></i>
+                                <span> ۰ دیدگاه</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-newest-blog-post">
+                        <div class="container-newest-blog-post__container-img">
+                            <a href="#"><img src="./img/app-for-changing-video-formats.png" alt="app-for-changing-video-formats"></a>
+                        </div>
+                        <a href="#" class="container-newest-blog-post__title-link hover-color-green">بهترین برنامه های تغییر فرمت ویدئویی</a>
+                        <p class="container-newest-blog-post__description">
+                            حتما تا به حال توجه کردید که فایل های ویدئویی با فرمت های متنوعی ارائه می شوند اما واقعیت این است که همه فرمت ها در همه جا قابل ...
+                        </p>
+                        <div class="container-newest-blog-post__container-Comments">
+                            <div class="container-check">
+                                <div class="container-newest-blog-post__nine-to-square">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <span>نقد و بررسی</span>
+                            </div>
+                            <div class="container-point-of-view">
+                                <i class="fa fa-comment-o"></i>
+                                <span> ۰ دیدگاه</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-newest-blog-post">
+                        <div class="container-newest-blog-post__container-img">
+                            <a href="#"><img src="./img/introducing-the-best-free-plugins.png" alt="introducing-the-best-free-plugins"></a>
+                        </div>
+                        <a href="#" class="container-newest-blog-post__title-link hover-color-green">معرفی بهترین افزونه های رایگان ریدایرکت...</a>
+                        <p class="container-newest-blog-post__description">
+                            گاهی مواقع نیاز به تغییر مسیر یک آدرس یا ریدایرکت داریم. این موضوع برای فروشگاه هایی که محصول ناموجود و یا توقف فروش دارند از اهمیت ...
+                        </p>
+                        <div class="container-newest-blog-post__container-Comments">
+                            <div class="container-check">
+                                <div class="container-newest-blog-post__nine-to-square">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <span>نقد و بررسی</span>
+                            </div>
+                            <div class="container-point-of-view">
+                                <i class="fa fa-comment-o"></i>
+                                <span> ۰ دیدگاه</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-newest-blog-post">
+                        <div class="container-newest-blog-post__container-img">
+                            <a href="#"><img src="./img/WooCommerce-SEO-plugin-tutorial.png" alt="WooCommerce-SEO-plugin-tutorial"></a>
+                        </div>
+                        <a href="#" class="container-newest-blog-post__title-link hover-color-green">آموزش افزونه سئوی ووکامرس</a>
+                        <p class="container-newest-blog-post__description">
+                            افزونه سئو ووکامرس به سئو حرفه ای سایت فروشگاهی شما از طریق برجسته تر کردن نتایج در سرچ گوگل کمک می کند. این افزونه تنظیمات ساده ای ...
+                        </p>
+                        <div class="container-newest-blog-post__container-Comments">
+                            <div class="container-check">
+                                <div class="container-newest-blog-post__nine-to-square">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                                <span>مجموعه آموزش های وردپرس</span>
+                            </div>
+                            <div class="container-point-of-view">
+                                <i class="fa fa-comment-o"></i>
+                                <span> ۰ دیدگاه</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
