Add widgets section

--- a/homepage.html
+++ b/homepage.html
@@ -3080,6 +3080,49 @@
             </div>
         </article>
 
+        <articlr class="total-container-widgets">
+            <div class="second-container">
+                <div class="container-widgets">
+                    <div class="container-widget">
+                        <div class="container-widget__container-img">
+                            <img src="./img/original-img.png" alt="original-img">
+                        </div>
+                        <span>اصلی و اورجینال</span>
+                        <span>با ضمانت بازگشت وجه</span>
+                    </div>
+                    <div class="container-widget">
+                        <div class="container-widget__container-img">
+                            <img src="./img/Easy-installation-img.png" alt="Easy-installation-img">
+                        </div>
+                        <span>نصب آسان</span>
+                        <span>همراه با پشتیبانی کامل</span>
+                    </div>
+                    <div class="container-widget">
+                        <div class="container-widget__container-img">
+                            <img src="./img/help-file-img.png" alt="help-file-img">
+                        </div>
+                        <span>فایل راهنما</span>
+                        <span>برای استفاده صحیح</span>
+                    </div>
+                    <div class="container-widget">
+                        <div class="container-widget__container-img">
+                            <img src="./img/Refund-img.png" alt="Refund-img">
+                        </div>
+                        <span>بازگشت وجه</span>
+                        <span>ضمانت بازگشت 6 ماهه
+                        </span>
+                    </div>
+                    <div class="container-widget">
+                        <div class="container-widget__container-img">
+                            <img src="./img/support-img.png" alt="support-img">
+                        </div>
+                        <span>پشتیبانی</span>
+                        <span>6 ماه پشتیبانی رایگان</span>
+                    </div>
+                </div>
+            </div>
+        </articlr>
+
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
